--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -9,6 +9,10 @@ author_profile: true
 {% include group-by-array collection=site.posts field="tags" %}
 
 {% for tag in group_names %}
+  <h2 id="{{ tag | slugify }}" class="archive__subtitle" href="https://dandoge.github.io/tags/#{{ tag }}">{{ tag }}</h2>
+{% endfor %}
+
+{% for tag in group_names %}
   {% assign posts = group_items[forloop.index0] %}
   <h2 id="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>
   {% for post in posts %}
