--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-permalink: /tags/
+permalink: /tags#
 title: "Posts by Tags"
 author_profile: true
 ---
@@ -13,7 +13,7 @@ author_profile: true
 
 <p class="page__taxonomy">
   <strong><i class="fa fa-fw fa-tags" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].tags_label | default: "Tags:" }} </strong>
-  <span itemprop="keywords">
+  <span>
   {% for hash in tag_hashes %}
     {% assign keyValue = hash | split: '#' %}
     {% capture tag_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
