--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-permalink: /tags#
+permalink: /tags/
 title: "Posts by Tags"
 author_profile: true
 ---
@@ -17,7 +17,7 @@ author_profile: true
   {% for hash in tag_hashes %}
     {% assign keyValue = hash | split: '#' %}
     {% capture tag_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
-    <a href="{{ base_path }}{{ tag_word | slugify | prepend: site.tag_archive.path }}" class="page__taxonomy-item">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+    <a href="https://dandoge.github.io/tags# {{tag_word | slugify}}" class="page__taxonomy-item">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
   {% endfor %}
   </span>
 </p>
