--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -8,16 +8,23 @@ author_profile: true
 {% include base_path %}
 {% include group-by-array collection=site.posts field="tags" %}
 
+{% case site.tag_archive.type %}
+  {% when "liquid" %}
+    {% assign path_type = "#" %}
+  {% when "jekyll-archives" %}
+    {% assign path_type = nil %}
+{% endcase %}
+
 {% capture page_tags %}{% for tag in group_names %}{{ tag | downcase }}#{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
 {% assign tag_hashes = (page_tags | split: ',' | sort:0) %}
 
-<p class="page__taxonomy">
+<p>
   <strong><i class="fa fa-fw fa-tags" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].tags_label | default: "Tags:" }} </strong>
   <span>
   {% for hash in tag_hashes %}
     {% assign keyValue = hash | split: '#' %}
     {% capture tag_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
-    <a href="https://dandoge.github.io/tags# {{tag_word | slugify}}" class="page__taxonomy-item">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+    <a href="{{ base_path }}{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path }}">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
   {% endfor %}
   </span>
 </p>
