--- a/_pages/tag-archive.html
+++ b/_pages/tag-archive.html
@@ -18,20 +18,20 @@ author_profile: true
 {% capture page_tags %}{% for tag in group_names %}{{ tag | downcase }}#{{ tag }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
 {% assign tag_hashes = (page_tags | split: ',' | sort:0) %}
 
-<p>
+<p class="page__taxonomy">
   <strong><i class="fa fa-fw fa-tags" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].tags_label | default: "Tags:" }} </strong>
   <span>
   {% for hash in tag_hashes %}
     {% assign keyValue = hash | split: '#' %}
     {% capture tag_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
-    <a href="{{ base_path }}{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path }}">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+    <a href="{{ base_path }}{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path }}" class="page__taxonomy-item">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
   {% endfor %}
   </span>
 </p>
 
 {% for tag in group_names %}
   {% assign posts = group_items[forloop.index0] %}
-  <h2 name="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>
+  <h2 id="{{ tag | slugify }}" class="archive__subtitle">{{ tag }}</h2>
   {% for post in posts %}
     {% include archive-single.html %}
   {% endfor %}
