--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -8,6 +8,27 @@ author_profile: true
 {% include base_path %}
 {% include group-by-array collection=site.posts field="categories" %}
 
+{% case site.category_archive.type %}
+  {% when "liquid" %}
+    {% assign path_type = "#" %}
+  {% when "jekyll-archives" %}
+    {% assign path_type = nil %}
+{% endcase %}
+
+{% capture page_categorys %}{% for category in group_names %}{{ category | downcase }}#{{ category }}{% unless forloop.last %},{% endunless %}{% endfor %}{% endcapture %}
+{% assign category_hashes = (page_categorys | split: ',' | sort:0) %}
+
+<p class="page__taxonomy">
+  <strong><i class="fa fa-fw fa-categorys" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].categorys_label | default: "Categories:" }} </strong>
+  <span>
+  {% for hash in category_hashes %}
+    {% assign keyValue = hash | split: '#' %}
+    {% capture category_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
+    <a href="{{ base_path }}{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path }}" class="page__taxonomy-item">{{ category_word }}</a>{% unless forloop.last %}<span class="sep">, </span>{% endunless %}
+  {% endfor %}
+  </span>
+</p>
+
 {% for category in group_names %}
   {% assign posts = group_items[forloop.index0] %}
   <h2 id="{{ category | slugify }}" class="archive__subtitle">{{ category }}</h2>
