--- a/_pages/project-archive.html
+++ b/_pages/project-archive.html
@@ -6,6 +6,6 @@ author_profile: false
 ---
 
 {% include base_path %}
-{% for post in site.pages %}
+{% for project in site.projects %}
   {% include archive-single.html %}
 {% endfor %}
