--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -9,11 +9,18 @@ redirect_from:
 
 {% include base_path %}
 {% capture written_year %}'None'{% endcapture %}
+{% capture written_month %}'None'{% endcapture %}
 {% for post in site.posts %}
   {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
+  {% capture month %}{{ post.date | date: '%M' }}{% endcapture %}
   {% if year != written_year %}
     <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
+    <h2 id="{{ month | slugify }}" class="archive__subtitle">{{ month }}</h2>
     {% capture written_year %}{{ year }}{% endcapture %}
+  {% endif %}
+  {% if month != written_month %}
+    <h2 id="{{ month | slugify }}" class="archive__subtitle">{{ month }}</h2>
+    {% capture written_month %}{{ month }}{% endcapture %}
   {% endif %}
   {% include archive-single.html %}
 {% endfor %}
