--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -12,14 +12,10 @@ redirect_from:
 {% capture written_month %}'None'{% endcapture %}
 {% for post in site.posts %}
   {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
-  {% capture month %}{{ post.date | date: '%M' }}{% endcapture %}
-  {% if year != written_year %}
-    <h2 id="{{ year | slugify }}" class="archive__subtitle">{{ year }}</h2>
-    <h2 id="{{ month | slugify }}" class="archive__subtitle">{{ month }}</h2>
+  {% capture month %}{{ post.date | date: '%B' }}{% endcapture %}
+  {% if year != written_year or month != written_month %}
+    <h2 id="{{ year | slugify }} - {{ month | slugify }}" class="archive__subtitle">{{ year }} - {{ month }}</h2>
     {% capture written_year %}{{ year }}{% endcapture %}
-  {% endif %}
-  {% if month != written_month %}
-    <h2 id="{{ month | slugify }}" class="archive__subtitle">{{ month }}</h2>
     {% capture written_month %}{{ month }}{% endcapture %}
   {% endif %}
   {% include archive-single.html %}
